font added, scrollbar styled report form fixed

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,6 +1,7 @@
 nav {
   background-color: #5288bd;
   color: white;
+  font-weight: bold;
 }
 nav li {
   padding: 10px;
