--- a/src/Components/Report/report.css
+++ b/src/Components/Report/report.css
@@ -66,17 +66,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  overflow: auto;
   box-shadow: inset 0 0 40px #3a6da0;
   border-radius: 15px;
 }
-.modalForm div {
+.modalSubContainer {
+  height: 100vh;
+  overflow: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 20px;
 }
+.modalSubContainer div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .modalForm span {
   color: red;
   position: absolute;
@@ -95,8 +100,10 @@
   background-color: #3a6da0;
   padding: 10px;
   margin-top: 10px;
+  margin-bottom: 20px;
   border-radius: 5px;
   color: white;
+  align-self: center;
 }
 input:invalid,
 select:invalid {
