--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,28 @@
-@font-face {
-  font-family: "Playfair";
-  src: url("fonts/static/PlayfairDisplay-Black.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
 body {
   margin: 0;
-  font-family: "Playfair";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #5288bd;
+  border-radius: 100px;
+  margin-left: 4px;
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #5288bd;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ababab;
 }
